# fnb58

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/fnb58/: __init__.py  cli.py
tests/: test_decoder.py
