[project]
name = "fnb58"
version = "0.1.0"
description = "Read voltage, current, power and more from a FNIRSI FNB58 USB power meter over Bluetooth (BLE)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["fnb58", "fnirsi", "usb", "power-meter", "bluetooth", "ble", "bleak"]
dependencies = [
    "bleak>=0.21",
]

[project.scripts]
fnb58 = "fnb58.cli:main"

[project.urls]
Homepage = "https://github.com/baryluk/fnirsi-usb-power-data-logger"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fnb58"]
